[BUGFIX]: Fixing bugs, code refactoring